--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Estimate and plot
 Version: 0.1.0
 Authors@R: c(
-    person("Enzo","Beijer", role = c("aut", "cre")),
+    person("Enzo","Beijer", email = "enzo.beijer@unil.ch", role = "cre"),
     person("Sarah", "Ismail", role = "aut"),
     person("Nada", "Abdulghafor", role = "aut"),
     person("Waren", "Lugon", role = "aut"),
